force-app/main/default/objects/copado__Theme__c/fields/copado__Theme_Details__c.field-meta.xml
<CustomField>
    <fullName>copado__Theme_Details__c</fullName>
    <label>Theme Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>